--- a/campaigns/templates/campaigns/admin_users.html
+++ b/campaigns/templates/campaigns/admin_users.html
@@ -90,13 +90,13 @@
                                         <a href="{% url 'admin_set_target' u.id %}" 
                                            class="btn btn-outline-warning" 
                                            title="Set Target">
-                                            <i class="fas fa-bullseye"></i> Target
+                                            <i class="fas fa-bullseye"></i>
                                         </a>
                                         
                                         <!-- Set Password Button -->
                                         <a href="{% url 'admin_set_password' u.id %}" 
                                            class="btn btn-outline-primary" 
-                                           title="Set Password">
+                                           title="Update Password">
                                             <i class="fas fa-key"></i>
                                         </a>
                                         
