--- a/campaigns/templates/campaigns/followup_table.html
+++ b/campaigns/templates/campaigns/followup_table.html
@@ -75,9 +75,9 @@
                                 </td>
                                 <td>
                                     {% if followup.contacted %}
-                                        <span class="badge bg-success">Yes</span>
+                                        <span class="status-badge status-success">Yes</span>
                                     {% else %}
-                                        <span class="badge bg-warning">No</span>
+                                        <span class="status-badge status-warning">No</span>
                                     {% endif %}
                                 </td>
                                 <td>{{ followup.contact_method|default:"-" }}</td>
